# FYP-Code

./: CMakeLists.txt  README.md  package.xml  sonar_nodelet.xml
cfg/: Pipeline.cfg
colorpicker/: colorpicker  colorpicker.c
include/: bvt_sdk.h
include/bvt_c/: bvt_colorimage.h  bvt_colormapper.h  bvt_error.h  bvt_head.h  bvt_logger.h  bvt_magimage.h  bvt_navdata.h  bvt_ping.h  bvt_rangedata.h  bvt_retval.h  bvt_sdk.h  bvt_sonar.h
include/bvt_cpp/: bvt_colorimage.h  bvt_colormapper.h  bvt_error.h  bvt_head.h  bvt_logger.h  bvt_magimage.h  bvt_navdata.h  bvt_ping.h  bvt_rangedata.h  bvt_retval.h  bvt_sdk.h  bvt_sonar.h
launch/: sonar.launch
matlab/: BAG2  BAG3  BAG4  BAG5  Functions.m  MC.txt  Model.m  Model2.m  Model3.m  Model4.m  RealData.m  RealDataOld.m  SonarMapping.mat  TestData.m  WeedData.m  calibrationSession.mat  pftest.txt  pftest2.txt  pftest3.txt
msg/: camera_mapping.msg  pf_solution.msg  pf_solutions.msg  sonar_object.msg  sonar_objects.msg
scripts/: Algorithms.py  Pipeline.py  Ros.py  UI.py  UI.ui  camshift.py  common.py  depth.py  sonar_mapping.py  test.py  video.py
src/: node.cpp
srv/: sonar_pixel.srv  toggle.srv
srv/srv/: __init__.py  _sonar_pixel.py  _toggle.py
tex/: FYP.aux  FYP.out  FYP.pptx  FYP.tex  FYP.toc  cover.docx  eq.lyx  test.aux  test.bbl  test.bib  test.blg  test.lof  test.out  test.tex  test.toc
tex/testing/: testing.aux  testing.bbl  testing.bib  testing.blg  testing.tex
